<resources>
    <string name="app_name">CourseLogger</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Clear">Clear</string>
    <string name="_40">40</string>
    <string name="_60">60</string>
    <string name="_97">97</string>
    <string name="_95">95</string>
    <string name="e_g_exams">e.g. Exams</string>
    <string name="e_g_hw">e.g. HW</string>
    <string name="Calculate">Calculate</string>
    <string name="name_optional">Name (optional)</string>
    <string name="grade">Grade (%)</string>
    <string name="weight">Weight</string>
    <string name="course_name">\nCourse Name</string>
    <string name="e_g_cse_570">e.g. CSE 570</string>
    <string name="course_description">\nCourse Description</string>
    <string name="eg_mobile_device_programming">eg. Mobile Device Programming</string>
    <string name="building_location">\nBuilding Location</string>
    <string name="enter_street_address">Enter Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="get_coordinates">Get Coordinates</string>
    <string name="textview">TextView</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="info">Info</string>
    <string name="nweekly_study_hour_goal">\nWeekly Study Hour Goal</string>
    <string name="e_g_10">e.g. 10</string>
    <string name="save_course">Save Course</string>
    <string name="add_deadline">Add Deadline</string>
    <string name="nadd_a_deadline">\nAdd A Deadline</string>
    <string name="deadline_info">Deadline Info</string>
    <string name="date">Date</string>
    <string name="e_g_final_project_due">e.g. Final Project Due</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="course_desc">Course Desc</string>
    <string name="delete">x</string>
    <string name="course_name_list">Course Name</string>
    <string name="x">X</string>
    <string name="deadline_date">Deadline Date</string>
    <string name="course_list">Course List</string>
    <string name="deadline_list">Deadline List</string>
</resources>